--- a/5/wordpress/php7.3/Dockerfile
+++ b/5/wordpress/php7.3/Dockerfile
@@ -107,11 +107,13 @@ RUN curl -LsS https://download.civicrm.org/civix/civix.phar -o /usr/local/bin/ci
 
 # Configure apache
 
-RUN a2enmod rewrite headers
+RUN a2enmod rewrite headers remoteip
 
 COPY ./apache.conf /etc/apache2/conf-available/civicrm.conf
 
 RUN a2enconf civicrm
+
+COPY ./apache-sites-available-default.conf /etc/apache2/sites-available/000-default.conf
 
 # Configure php
 
@@ -141,12 +143,12 @@ RUN wp core download
 RUN mkdir /var/www/html/wp-content/uploads
 
 RUN cd /var/www/html/wp-content/plugins \
-    && curl -L https://download.civicrm.org/civicrm-5.40.1-wordpress.zip > civicrm-wordpress.zip \
+    && curl -L https://download.civicrm.org/civicrm-5.40.2-wordpress.zip > civicrm-wordpress.zip \
     && unzip civicrm-wordpress.zip \
     && rm civicrm-wordpress.zip
 
 RUN cd /var/www/html/wp-content/plugins \
-    && curl -L https://download.civicrm.org/civicrm-5.40.1-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.40.2-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
