--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -3,4 +3,5 @@
 [mysqld]
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
 max_allowed_packet=1024M
-
+character_set_server=utf8mb4
+collation_server=utf8mb4_unicode_ci
