Update wordpress docker-compose examples to use the latest docker images

--- a/docker-compose/wordpress/docker-compose.dev.dist.yml
+++ b/docker-compose/wordpress/docker-compose.dev.dist.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   civicrm:
-    image: michaelmcandrew/civicrm-wordpress
+    image: michaelmcandrew/civicrm:wordpress
     hostname: civicrm
     environment:
       - PROJECT_NAME
