we can install cgr on php8.x as per https://github.com/consolidation/cgr/issues/40#issuecomment-1188815523

--- a/5/drupal/php7.4/Dockerfile
+++ b/5/drupal/php7.4/Dockerfile
@@ -91,7 +91,8 @@ ENV APACHE_RUN_GROUP=civicrm
 
 USER civicrm
 
-RUN composer global require consolidation/cgr
+# TODO: We should install composer a better way.
+RUN composer global require --ignore-platform-req consolidation/cgr
 
 USER root
 
