mysql: limit space allocated for temp tables and query execution time

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,7 +1,17 @@
 # Keep this in sync with https://docs.civicrm.org/sysadmin/en/latest/requirements/#mysql
 
 [mysqld]
+
+# K
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
 max_allowed_packet=1024M
+
+# Set
 character_set_server=utf8mb4
 collation_server=utf8mb4_unicode_ci
+
+# Preallocate and limit the amount of space that can be used by temporary tables (https://chat.civicrm.org/civicrm/pl/eh138wwpciddbctuwuubqxjcaw)
+innodb_temp_data_file_path=ibtmp1:10G:autoextend:max:10G
+
+# Set a limit on long running SELECT statements (https://chat.civicrm.org/civicrm/pl/eh138wwpciddbctuwuubqxjcaw)
+max_execution_time=180000
