Reduce initial size of tmp file to 100MB

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -11,7 +11,7 @@ character_set_server=utf8mb4
 collation_server=utf8mb4_unicode_ci
 
 # Preallocate and limit the amount of space that can be used by temporary tables (https://chat.civicrm.org/civicrm/pl/eh138wwpciddbctuwuubqxjcaw)
-innodb_temp_data_file_path=ibtmp1:10G:autoextend:max:10G
+innodb_temp_data_file_path=ibtmp1:100M:autoextend:max:10G
 
 # Set a limit on long running SELECT statements (https://chat.civicrm.org/civicrm/pl/eh138wwpciddbctuwuubqxjcaw)
 max_execution_time=600000
