function creation fixes

--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -5,7 +5,7 @@
 # K
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION"
 max_allowed_packet=1024M
-host_cache_size=0
+log_bin_trust_function_creators=1
 
 # Set
 character_set_server=utf8mb4
