Add apache expires module

--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -108,7 +108,7 @@ RUN curl -LsS https://download.civicrm.org/civix/civix.phar -o /usr/local/bin/ci
 
 # Configure apache
 
-RUN a2enmod rewrite headers remoteip
+RUN a2enmod expires headers remoteip rewrite
 
 COPY ./apache.conf /etc/apache2/conf-available/civicrm.conf
 
