--- a/5/drupal/php8.1/Dockerfile
+++ b/5/drupal/php8.1/Dockerfile
@@ -108,7 +108,7 @@ RUN curl -LsS https://download.civicrm.org/civix/civix.phar -o /usr/local/bin/ci
 
 # Configure apache
 
-RUN a2enmod rewrite headers remoteip
+RUN a2enmod expires headers remoteip rewrite
 
 COPY ./apache.conf /etc/apache2/conf-available/civicrm.conf
 
@@ -147,12 +147,12 @@ RUN drush dl drupal-7 --destination=/var/www --drupal-project-rename=html -y
 RUN mkdir /var/www/html/sites/default/files
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.76.2-drupal.tar.gz > civicrm-drupal.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.78.0-drupal.tar.gz > civicrm-drupal.tar.gz \
     && tar xzf civicrm-drupal.tar.gz \
     && rm civicrm-drupal.tar.gz
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.76.2-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.78.0-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
