--- a/5/drupal/php8.1/Dockerfile
+++ b/5/drupal/php8.1/Dockerfile
@@ -64,6 +64,7 @@ RUN apt-get update \
 # Configure and install php extensions (note configuration comes before installation)
 
 RUN docker-php-ext-install bcmath \
+  && docker-php-ext-install exif \  
   && docker-php-ext-configure gd --with-jpeg \
   && docker-php-ext-install gd \
   && docker-php-ext-install gettext \
@@ -173,12 +174,12 @@ RUN drush dl drupal-7 --destination=/var/www --drupal-project-rename=html -y
 RUN mkdir /var/www/html/sites/default/files
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.78.0-drupal.tar.gz > civicrm-drupal.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.78.3-drupal.tar.gz > civicrm-drupal.tar.gz \
     && tar xzf civicrm-drupal.tar.gz \
     && rm civicrm-drupal.tar.gz
 
 RUN cd /var/www/html/sites/all/modules \
-    && curl -L https://download.civicrm.org/civicrm-5.78.0-l10n.tar.gz > civicrm-l10n.tar.gz \
+    && curl -L https://download.civicrm.org/civicrm-5.78.3-l10n.tar.gz > civicrm-l10n.tar.gz \
     && tar xzf civicrm-l10n.tar.gz \
     && rm civicrm-l10n.tar.gz
 
